# rdb-ultra

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml  haproxy.cfg  info.json
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  CHALLENGE.md  SCORE_TRIALS.md  TESTING.md
model/hour/: support-h00.idx  support-h01.idx  support-h02.idx  support-h03.idx  support-h04.idx  support-h05.idx  support-h06.idx  support-h07.idx  support-h08.idx  support-h09.idx  support-h10.idx  support-h11.idx  support-h12.idx  support-h13.idx  support-h14.idx  support-h15.idx  support-h16.idx  support-h17.idx  support-h18.idx  support-h19.idx  support-h20.idx  support-h21.idx  support-h22.idx  support-h23.idx
src/: binary_index.rs  classifier.rs  distance.rs  engine.rs  http.rs  index.rs  lib.rs  main.rs  mcc.rs  model.rs  normalization.rs  time.rs  vectorize.rs
tests/: classifier.rs  index_and_http.rs  vectorization.rs
