[package]
name = "rdb-ultra"
version = "0.1.0"
edition = "2021"

[lib]
name = "rinha_backend_v2"
path = "src/lib.rs"

[[bin]]
name = "rinha-api"
path = "src/main.rs"

[[bin]]
name = "build-index"
path = "src/bin/build_index.rs"

[dependencies]
bytemuck = "1.16"
flate2 = "1.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
